--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>sylcpn_io</title>
   <link rel="manifest" href="manifest.json">
+  <script src="download.js" defer></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
